<?xml version="1.0"?>
<package>
  <name>mico</name>
  <version>0.0.1</version>
  <description>ros mico plugin</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="marrcogrova@gmail.com">Marco Montes Grova</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>dvs_msgs</build_depend> -->
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- <run_depend>dvs_msgs</run_depend> -->
</package>
